# tech_note_blog

./: .gitignore  README.md  test.json  系统架构师.md
SDKs/: Azure-Kinect-Sensor-SDK.md  Azure-Kinect-Sensor-SDK读书笔记.md
actors/: EsDemo.py  get.py  main.py
blog/: 2018读书清单.md  AI.md  Android.md  ElasticSearch.md  Python.md  Todo.md  algorithm.md  c++.md  java.md  mysql.md  spaceemacs-note.md  springboot++.md  vue.md  不错的开源项目及技术预研.md  前端.md  大数据.md  常用命令.md  技术小笔记.md  技术职业方向.md  爬虫.md  英语学习.md
blog/文章/: 最佳的75个安全工具 .md
booklist/: 2019_booklist.tdl
c++modules/: c++modules.md  todo.4.c++modules_azure-c-shared-utility.md  todo.4.c++modules_奔溃报告.md  todo.4.c++modules_并发队列concurrentqueue的使用.md  todo.5.c++modules_c++11网络库handy初识.md  todo.5.c++modules_c++命令行解析库.md  todo.5.c++modules_libpngHowToUse.md  todo.5.c++modules_logger.md  todo.5.c++modules_调试内存问题.md
c++modules/logger/: slogger.7z
common/: todo.4.ebooks.md  todos.md  usb.md  学术论文的下载.md  工程常用名词.md  常用命令备忘.md  笔记文件名命名规则.md
common/3DCamera/: 1.3Dcamera_内参外参畸变参数.md  3DCamera_结构光基本原理.md  todo.3DCameraTOF相机的标定.md  todo.3DCameraTOF系统的误差分析.md  todo.3DCameraToFSensor的简单使用.md  todo.3DCamera深度转点云.md  todo.3DcameraTOF相机再探.md  todo.3Dcamera_TOF与结构光.md  todo.3Dcamera相机领域常用的名词和概念.md  todo.4.3DCamera_RGB相机得常用参数.md  todo.4.3DCamera_摄像头的基本组成.md  todo.Camera ISP基本框架和概念.md  todos.3DcameraTOF基础知识.md  外量子效率是什么.md
common/AI/: todo.7.AI_读书路线0-数学.md  todo.7.AI_读书路线1-机器学习.md  todo.7.AI_读书路线2-深度学习.md  todo.7.AI_读书路线3-强化学习.md  todo.7.AI_读书路线4-前沿Paper.md
common/Android/: Android Project Treble 是啥？.md  Android [Camera 源码] 概述(overview) Google官方文档笔记.md  Android [Camera 源码] 相机 HAL3(Camera3) Google官方文档2.md  Android应用篇_Android权限.md  android.md  android9.0系统源码编译.md  kailiLinux入门.md  todo.5.camera架构_1.md  todo.Android8.1HAL层开发.md  todo.AndroidCamera2的调用流程.md  todo.AndroidCamera框架.md  todo.Android好用的android命令.md  todo.Android开发中so文件应该知道的那些事儿.md  todo.android奔溃日志简易查看.md  todo.android常用逆向工具及简单使用一览.md  todo.android的栈空间大小.md  todo.libcap库初识.md  todo.selinux相关日志查看.md  todo.ubuntu16.4AndroidStudio环境搭建.md  todo.常用android命令行.md
common/DOS/: todo.3.DOS_net命令详解.md  todo.8.bat_for命令的详细使用.md
common/H5/: todo.6.小程序第三方框架选型.md
common/Jetson Nano/: todo.1.JetsonNano_Getting Started With Jetson Nano Developer Kit .md
common/MachineVision/: 1.深度相机结构光基本原理.md  3Dcamera_内参外参畸变参数.md  todo.3DcameraTOF相机再探.md  todo.3D摄像头整体分析.md  todo.3D摄像头组成及产业链情况.md  todo.NVIDIA Announces Jetson Nano.md  todo.imageJ的使用.md  todo.md  todo.世界坐标系与摄像机坐标系的变换.md  todo.双目测距原理.md  todo.图像bit10转bit8的原理和实现.md  todo.图像处理中消除相机透镜畸变和视角变换.md  todo.图像的中值滤波与均值滤波.md  todo.深度相机的内参外参畸变参数.md  todo.激光散斑IRProjector和IRCamera的基本使用.md  todo.相机标定详解.md  todo.罗德里格斯旋转公式简单推导和应用.md  todo1.bayer2RGB.md  todo2.opencv中的Mat.md  todos.3DcameraTOF基础知识.md  todos.md  todos.相机针孔模型.md
common/OpenNI2/: OpenNI_API篇_主要接口类.md  Openni2.vpp  XnUSB_API接口描述.md  todo.3.uvc_linuxv4l2是什么.md  todo.4.libuvc_应用篇_libuvc是什么.md  todo.5,openni2.3sdk_源码框架.md  todo.5.RGB-D Camera 情况.md  todo.5.libudev是什么.md  todo.5.libusb API Reference .md  todo.5.libusb_基础篇_usb通讯协议.md  todo.5.libusb_应用篇_libusb是什么.md  todo.5.libusb_应用篇_采集camera.md  todo.5.libusb是什么.md  todo.5.libusb源码目录.md  todo.5.libusb热插拔事件监听.md  todo.5.usb枚举过程详解.md  todo.5.uvc_usb概念.md  todo.5.uvc_uvc是什么.md  todo.5.uvc_图说usb通讯协议.md  todo.5.uvc_图说uvc协议.md  todo.5.uvc_基于Media Foundation SDK采集uvc摄像头.md  todo.5.图像处理相关基本概念.md  todo.5.将RGB和Depth归一化为RGBD图像.md  todo.6.OpenNI2_实现openni驱动stepbystep.md  todo.6.OpenNI2的驱动模块.md  todo.6.OpenNI_API篇_主要接口说明.md  todo.6.OpenNI_实现篇_initialize流程.md  todo.6.OpenNI_实现篇_主要内部数据结构.md  todo.6.OpenNI_实现篇_主要接口实现流程.md  todo.usb的电气特性.md  todo.uvc_usb问答.md  uvc_usb基础篇_usb通讯协议及枚举流程.md  uvc_应用篇_uvc是什么.md  uvc_认识usb通讯协议.md  uvc枚举抓包.txt
common/Web公众号及小程序开发/: 001-微信小程序-下拉菜单.md  001-微信小程序-入门.md  001-微信小程序-城市选择器.md  001-时间管理todolist的设定原则.md  002-golang-go-chi库的使用.md  003-jQuery Tmpl 文件的使用.md  009-互联网-WebSocket 是啥哩.md  js中的this指针.md  nginx的配置使用.md  node.js入门.md  npm命令概述.md  web前端项目开发流程.md  使用bootstrap制作网站.md  前端框架的选择.md  微信公众号开发.md  微信小程序入门.md  服务器环境搭建.md
common/algorithm/: 1.SDK设计的原则.md  todo.SDK设计的原则.md  todo.algorithm_ Merkle hash.md  todo.algorithm_dynamic programming.md  无算压缩算法.md
common/blog/: todo.2.solo_开源博客solo.md  todo.开源博客solo.md
common/c++11/: 1.c++11左值引用右值引用.md  100.c++libs,nlohmann_json的使用.md  Dependencies dll依赖工具.md  c++11_Cppcheck-manual.md  c++11_chrono时间函数.md  c++11_clang-format风格格式化.md  c++11_cppcheck的使用.md  c++11_enable_shared_from_this.md  c++11_lamda表达式的用法.md  c++11_static_assert静态断言.md  c++11_using的使用.md  c++11_新关键字noexcept.md  c++11_时间函数.md  c++11_类特殊函数的控制=delete函数=default函数.md  c++11_语法篇_##和#操作符.md  c++11友元函数友元类.md  c++_Google代码风格指南.md  c++_Google风格审查工具cpplint的使用.md  c++_std-numeric_limits极值接口.md  c++捕获异常并获取堆栈信息.md  todo.2.c++11_程序奔溃快照.md  todo.2.c++Note.md  todo.3.c++11_常见Visual Studio编译链接问题及解决.md  todo.4.c++11_cc++中的内存.md  todo.4.c++11_using的使用.md  (+44 more)
common/c++11/c++demos/: CMakeLists.txt  demo_enable_shared_from_this.cpp  main.cpp  mycpplint.py
common/c++11/c++demos/chrono/: CMakeLists.txt  my_debug_helper.cpp  my_debug_helper.h  mychrono.cpp  mychrono.h
common/c++11/c++demos/common/: mz_status.h  timer.hpp
common/c++11/c++demos/unit-test/: CMakeLists.txt  test_main.cpp
common/cmake_scons/Demo/5/tests/: CMakeLists.txt  test.c  test.h
common/cmake_scons/Demo/6/: CMakeLists.txt
common/cmake_scons/Demo/6.2/: CMakeLists.txt
common/cmake_scons/Demo/6.2/math/: mymath.h
common/cmake_scons/Demo/6.2/tests/: CMakeLists.txt  test_version.h.ini
common/cmake_scons/Demo/7.1/: CMakeLists.txt  main.c
common/cmake_scons/Demo/7/math/: CMakeLists.txt
common/ffmpeg/FFmpegTest/: CMakeLists.txt  FFmpegTest.cpp
course/: course目标.md  todo.5.软件架构_SDK2.0介绍及当前问题-演进方向讨论.md  todo.5.软件架构_基本模式简单介绍 简介及抛砖引玉.md  todo.6.cmake_入门及简单使用.md
learn_py_cv/: 1.md
project/: 为什么.md  车载后视镜方案.md  项目方案预研.md
scripts/: Python画一棵漂亮的樱花树.md  info.py  peiqi.py  show_note_state.py  test.py  test_show_note_state.py  windows安装Turtle.md
shop/: todo.shop-online.md
todo/: 重试次数概率计算.md
深户办理20180918/: 办理备忘录.md  办理指南.docx  委托书.docx  居委会证明.docx  深圳市人才引进预准备材料清单.md
(+396 files in other folders)
